# CPP_projects

./: .gitignore  1.0.cpp  1.2.2.cpp  1.3.cpp  1.4.cpp  CMakeLists.txt  README.md  a.out  geometry.h
Algorithms/: a.out  adiv.cpp  readme.md
Algorithms/AVL/: ALV_tester.py  avl.cpp
Algorithms/Babichev/: ES.cpp  battle.cpp  book.cpp  brackets.cpp  brackets_stack.cpp  diplomas.cpp  greatest_k.cpp  greatest_k2.cpp  histogram.cpp  inversions.cpp  main.cpp  merge.cpp  minmax.cpp  mystack.cpp  pair-sum.cpp  vega.cpp
Algorithms/Dynamic/: bankomat.cpp  bankomat2.cpp  decompositions.cpp  ics.cpp  input.txt  krat.cpp  peace.cpp  phone.cpp  sequence.cpp  subset.cpp  subset2.cpp  subset_fast.cpp  subset_test.py  tester.py  triangle.cpp
Algorithms/Graphs/: E.cpp  E_opt.cpp  ancestor.cpp  dijkstra.cpp  empire.cpp  empire_fast.cpp  eulerian.cpp  excursion.cpp  graph_1.cpp  graph_2.cpp  graph_4.cpp  isolation.cpp  isolation2.cpp  knight.cpp  love.cpp  stamm.cpp  tester.py
Algorithms/Homework1/: SET.cpp  tester.py
Algorithms/Homework1/AVL/: AVL.cpp  avl.cpp  avl.out
Algorithms/Homework1/Babichev/: ES.cpp  RMQ.cpp  a.out  bits.cpp  book.cpp  brackets.cpp  brokers.cpp  diplomas.cpp  greatest_k2.cpp  greatest_k3.cpp  histogram2.cpp  main.cpp  median.cpp  merge.cpp  pair-sum.cpp  stack_postfix.cpp  tester.py  vega.cpp
Algorithms/Homework1/Dynamic/: a.out  cosmozoo.cpp  gvozd.cpp  nank_test.py  post.cpp  sailfish.cpp  squares.cpp  subset.cpp  subset_test.py  tester.py  ways.cpp
Algorithms/Homework1/Graphs/: a.out  border.cpp  condense.cpp  empire.cpp  empire_fast(norm).cpp  empire_fast.cpp  isolation.cpp  isolation_fast.cpp  lockdown.cpp  loop.cpp  territory.cpp  territory_OOP.cpp  test.py  top.cpp
Algorithms/Homework1/LineAge/: A3.cpp  C3.cpp  E3.cpp  G3.cpp  a.out  cmi_test.py  matrices.cpp  matrix.out  tester.py
Algorithms/Homework1/fenvic/: a.out  bigbrother.cpp  bigbrother4.cpp  structure.cpp  tester_fffenwik.py
Algorithms/Homework1/qsort/: 1.cpp  antiqsort.cpp  heap.cpp  number.cpp  temp.py  tester_number.py
Algorithms/Homework1/temp_python/: 2.py  4.py  5.py  source47.py
Algorithms/LineAge/: B3.cpp  D3.cpp  F3.cpp  H3.cpp  I3.cpp  cmi.cpp  cmi_test.py  comet.cpp  denis.cpp  matrix.in
Algorithms/fenvic/: bigbrother2.cpp  bigbrother3.cpp  fffenwik.cpp  fffenwik_tests.html  include.cpp  peremen.cpp  rvq.cpp  stars.cpp  tester_fffenwik.py
Algorithms/qsort/: 3.cpp  LSD.cpp  a.out  binomheap.cpp  first.cpp  flat.cpp  k_order_stat.cpp  layer.cpp  minmax.cpp  table.cpp  tester_number.py
Algorithms/temp_python/: 3.py  4.2.py  chain_sum.py  source.py
CPP/: readme.md
CPP/List/: alloc_test.cpp  readme.md
CPP/List/Debug/: enable_if_test.cpp  haha.py  hello_world.cpp  list3.h  stackallocator_ASDFGHJKL.cpp  stackallocator_test.cpp  strange_test.cpp  test_asdfghjk.cpp
CPP/SharedPtr/: readme.md  smart_pointers.h
CPP/SharedPtr/Debug/: my_test.cpp  strange_test.cpp
CPP/Unordered_map/: my_test.cpp  readme.md  unordered_map.h  unordered_map_test(2).cpp  unordered_map_with_TODO.h
CPP/Unordered_map/Debug/: rank_test.py  unordered_map2.h
CPP/Unordered_map/haha/: unordered_map.h
CPP/Variant/: my_test.cpp  readme.md  strange_test.cpp  variant.h  variant_test.cpp
CPP/Variant/Debug/: CMakeLists.txt  variant_test.cpp
CPP/VariantFinal/: CMakeLists.txt  strange_test.cpp  variant.h
CPP/VariantFinal/backup/: variant0.h
CPP/Vector/: vector.h  vector_public_test.cpp
CPP/biginteger/: 1.2.1.cpp  biginteger.h  readme.md
CPP/biginteger/Debug/: 1.2.cpp
CPP/biginteger/long_arithm/: bn.h  main.cpp
CPP/deque/: readme.md  test.cpp
CPP/deque/Debug/: deque_test.h
CPP/geometry/: readme.md
CPP/matrix/: matrix_test.cpp  readme.md
CPP/matrix/Debug/: 1.3.cpp  1.3_no_inheritance.cpp  matr.txt
CPP/string/: readme.md
Intern/Kasp/: C_reverse.cpp  test1.cpp  test1.py  test2.cpp  test2.py
Mesherin/List/: Node_swap.h  a.out  alloc_test.cpp  list.h  list2.h  stackallocator.cpp  stackallocator_test.cpp
Mesherin/SharedPtr/: my_test.cpp  smart_pointers.h  smartpointers_test(1).cpp
Mesherin/Unordered_map/: unordered_map.h  unordered_map2.h  unordered_map_test(1).cpp  unordered_map_test.cpp
Mesherin/Variant/: my_test.cpp  variant.h
Mesherin/VariantFinal/: a.out
Mesherin/Vector/: my_test.cpp
Mesherin/biginteger/long_arithm/: CMakeLists.txt  a.out  bn.h  div.cpp  fib.cpp  test.cpp
Mesherin/deque/: a.out  deque_test.cpp  test.cpp
Mesherin/matrix/: 1.3.cpp  rank_test.py  transpose.py
biginteger/: 1.2.1.cpp  temp_mul.cpp
deque/: deque.h  deque2.h  deque7.h  deque_with_good_pop.h
geometry/: geometry_test.cpp
matrix/: matrix.h  matrix_test.cpp
string/: string.h
