cmake_minimum_required(VERSION 3.20)
project(CPP_projects)

set(CMAKE_CXX_STANDARD 14)

include_directories(Algorithms)
include_directories(Algorithms/AVL)
include_directories(Algorithms/Babichev)
include_directories(Algorithms/Dynamic)
include_directories(Algorithms/fenvic)
include_directories(Algorithms/Graphs)
include_directories(Algorithms/LineAge)
include_directories(Algorithms/qsort)

include_directories(CPP/biginteger)
include_directories(CPP/biginteger/Debug/long_arithm)
include_directories(CPP/deque)
include_directories(CPP/deque/Debug/haha)
include_directories(CPP/geometry)
include_directories(CPP/List)
include_directories(CPP/matrix)
include_directories(CPP/matrix/Debug/haha)
include_directories(CPP/string)
include_directories(CPP/SharedPtr)

add_executable(CPP_projects
        Algorithms/AVL/avl.cpp
        Algorithms/Babichev/battle.cpp
        Algorithms/Babichev/bits.cpp
        Algorithms/Babichev/book.cpp
        Algorithms/Babichev/brackets.cpp
        Algorithms/Babichev/brackets_stack.cpp
        Algorithms/Babichev/brokers.cpp
        Algorithms/Babichev/diplomas.cpp
        Algorithms/Babichev/ES.cpp
        Algorithms/Babichev/greatest_k.cpp
        Algorithms/Babichev/greatest_k2.cpp
        Algorithms/Babichev/greatest_k3.cpp
        Algorithms/Babichev/histogram.cpp
        Algorithms/Babichev/histogram2.cpp
        Algorithms/Babichev/inversions.cpp
        Algorithms/Babichev/main.cpp
        Algorithms/Babichev/median.cpp
        Algorithms/Babichev/merge.cpp
        Algorithms/Babichev/minmax.cpp
        Algorithms/Babichev/mystack.cpp
        Algorithms/Babichev/pair-sum.cpp
        Algorithms/Babichev/RMQ.cpp
        Algorithms/Babichev/stack_postfix.cpp
        Algorithms/Babichev/vega.cpp
        Algorithms/Dynamic/bankomat.cpp
        Algorithms/Dynamic/bankomat2.cpp
        Algorithms/Dynamic/cosmozoo.cpp
        Algorithms/Dynamic/decompositions.cpp
        Algorithms/Dynamic/gvozd.cpp
        Algorithms/Dynamic/ics.cpp
        Algorithms/Dynamic/krat.cpp
        Algorithms/Dynamic/peace.cpp
        Algorithms/Dynamic/phone.cpp
        Algorithms/Dynamic/post.cpp
        Algorithms/Dynamic/sailfish.cpp
        Algorithms/Dynamic/sequence.cpp
        Algorithms/Dynamic/squares.cpp
        Algorithms/Dynamic/subset.cpp
        Algorithms/Dynamic/subset2.cpp
        Algorithms/Dynamic/subset_fast.cpp
        Algorithms/Dynamic/triangle.cpp
        Algorithms/Dynamic/ways.cpp
        Algorithms/fenvic/bigbrother.cpp
        Algorithms/fenvic/bigbrother2.cpp
        Algorithms/fenvic/bigbrother3.cpp
        Algorithms/fenvic/bigbrother4.cpp
        Algorithms/fenvic/fffenwik.cpp
        Algorithms/fenvic/include.cpp
        Algorithms/fenvic/peremen.cpp
        Algorithms/fenvic/rvq.cpp
        Algorithms/fenvic/stars.cpp
        Algorithms/fenvic/structure.cpp
        Algorithms/Graphs/eulerian.cpp
        Algorithms/Graphs/graph_1.cpp
        Algorithms/Graphs/graph_2.cpp
        Algorithms/Graphs/graph_4.cpp
        Algorithms/Graphs/dijkstra.cpp
        Algorithms/Graphs/love.cpp
        Algorithms/LineAge/A3.cpp
        Algorithms/LineAge/B3.cpp
        Algorithms/LineAge/C3.cpp
        Algorithms/LineAge/cmi.cpp
        Algorithms/LineAge/comet.cpp
        Algorithms/LineAge/D3.cpp
        Algorithms/LineAge/E3.cpp
        Algorithms/LineAge/F3.cpp
        Algorithms/LineAge/G3.cpp
        Algorithms/LineAge/H3.cpp
        Algorithms/LineAge/I3.cpp
        Algorithms/LineAge/matrices.cpp
        Algorithms/qsort/1.cpp
        Algorithms/qsort/3.cpp
        Algorithms/qsort/antiqsort.cpp
        Algorithms/qsort/binomheap.cpp
        Algorithms/qsort/first.cpp
        Algorithms/qsort/flat.cpp
        Algorithms/qsort/heap.cpp
        Algorithms/qsort/k_order_stat.cpp
        Algorithms/qsort/layer.cpp
        Algorithms/qsort/LSD.cpp
        Algorithms/qsort/minmax.cpp
        Algorithms/qsort/number.cpp
        Algorithms/qsort/table.cpp
        Algorithms/adiv.cpp
        Algorithms/SET.cpp
        CPP/argv/1.0.cpp
        CPP/biginteger/Debug/long_arithm/bn.h
        CPP/biginteger/Debug/long_arithm/div.cpp
        CPP/biginteger/Debug/long_arithm/fib.cpp
        CPP/biginteger/Debug/long_arithm/main.cpp
        CPP/biginteger/Debug/long_arithm/test.cpp
        CPP/biginteger/Debug/1.2.1.cpp
        CPP/biginteger/Debug/1.2.2.cpp
        CPP/biginteger/Debug/1.2.cpp
        CPP/biginteger/Debug/biginteger.h
        CPP/biginteger/Debug/temp_mul.cpp
        CPP/deque/Debug/haha/deque.h
        CPP/deque/Debug/haha/matrix.h
        CPP/deque/Debug/deque.h
        CPP/deque/Debug/deque2.h
        CPP/deque/Debug/deque7.h
        CPP/deque/Debug/deque_test.cpp
        CPP/deque/Debug/deque_test.h
        CPP/deque/Debug/deque_with_good_pop.h
        CPP/deque/Debug/test.cpp
        CPP/geometry/Debug/1.4.cpp
        CPP/geometry/Debug/geometry.h
        CPP/geometry/Debug/geometry_test.cpp
        CPP/List/Debug/alloc_test.cpp
        CPP/List/Debug/enable_if_test.cpp
        CPP/List/Debug/hello_world.cpp
        CPP/List/Debug/list.h
        CPP/List/Debug/list0.h
        CPP/List/Debug/list3.h
        CPP/List/Debug/Node_swap.h
        CPP/List/Debug/stackallocator.cpp
        CPP/List/Debug/stackallocator_test.cpp
        CPP/List/Debug/strange_test.cpp
        CPP/matrix/Debug/haha/deque.h
        CPP/matrix/Debug/haha/matrix.h
        CPP/matrix/Debug/1.3.cpp
        CPP/matrix/Debug/1.3_no_inheritance.cpp
        CPP/matrix/Debug/matrix.h
        CPP/matrix/Debug/matrix_test.cpp
        CPP/string/string.h Algorithms/Graphs/ancestor.cpp Algorithms/Graphs/loop.cpp Algorithms/Graphs/top.cpp Algorithms/Graphs/lockdown.cpp Algorithms/Graphs/isolation2.cpp Algorithms/Graphs/empire.cpp Algorithms/Graphs/territory.cpp Algorithms/Graphs/territory_OOP.cpp CPP/List/Debug/test_asdfghjk.cpp CPP/Unordered_map/Debug/my_test.cpp CPP/Unordered_map/Debug/unordered_map.h CPP/Unordered_map/Debug/haha/unordered_map.h Algorithms/Graphs/E.cpp Algorithms/Graphs/knight.cpp Algorithms/Graphs/excursion.cpp CPP/SharedPtr/Debug/smart_pointers.h CPP/SharedPtr/Debug/my_test.cpp CPP/SharedPtr/Debug/strange_test.cpp CPP/Variant/my_variant.h CPP/Variant/my_variant.h CPP/Variant/Debug/my_test.cpp CPP/Vector/Debug/vector.h CPP/Vector/Debug/my_test.cpp CPP/Variant/Debug/strange_test.cpp Algorithms/LineAge/denis.cpp Intern/Kasp/test1.cpp Intern/Kasp/test2.cpp Intern/Kasp/C_reverse.cpp CPP/List/list.h)
